--- a/index.html
+++ b/index.html
@@ -6,38 +6,8 @@
         <meta name="author" content="Afif Alfiano">
         <meta name="description" content="First Website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="style.css" href="style.css">
     </head>
-    <style>
-    body{
-        text-align: center;
-        background:url("/assets/afif_bg.jpg");
-        background-position:center;
-        background-size: auto;
-        background-repeat:no-repeat;
-        color:white;
-        font-family:helvetica;
-
-    }
-    p{
-        font-size:22px;
-    }
-
-    input{
-        border:0;
-        font-size:18px;
-        padding: 10px;
-    }
-    input[type="submit"]{
-        color:white;
-        background:red;
-    }
-    img{
-        margin-top:20px;
-        width:240px;
-        border-radius:50%;
-        border:7px white solid;
-    }
-    </style>
     <body>
         <img src="/assets/afif.png" alt="AfifAlfiano">
         <h1>Afif Alfiano</h1>
