--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Afif Alfiano">
         <meta name="description" content="First Website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="style.css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <img src="/assets/afif.png" alt="AfifAlfiano">
