--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <img src="/assets/afif.png" alt="AfifAlfiano">
+        <img src="assets/afif.png" alt="AfifAlfiano">
         <h1>Afif Alfiano</h1>
            <p>Hi! I'm Afif Alfiano, a IT Support at BSI UII. Say Hello!</p> 
         <input type="email" placeholder="Your Email">
